--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "galaxybot",
   "version": "1.0.0",
   "description": "A discord Bot",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node index.js"
   },
   "author": "Lars",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.1.0",
+    "discord.js": "11.1.0",
   },
